--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
 
   <!-- شريط الرأس -->
   <div class="header">
-    <h1 class="header-title">موقع مستر فيصل الرسمي</h1>
+    <h1 class="header-title"> اهلا بك في موقعنا 👋  </h1>
     <div class="header-controls">
       <button id="toggleDarkMode" class="control-btn" aria-pressed="false" aria-label="تبديل الوضع الليلي">
         <i class="fas fa-moon"></i>
