--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,23 @@
   <meta charset="UTF-8" />
   <title>تواصل معنا </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&display=swap" rel="stylesheet">
   <style>
+    :root {
+      --primary: #6a1b9a;
+      --primary-light: #9c27b0;
+      --accent: #25D366;
+      --accent-dark: #1ebe57;
+      --warning: #e91e63;
+      --info: #2196f3;
+      --text: #333;
+      --light-bg: #f4f0f8;
+      --card-shadow: 0 10px 20px rgba(0,0,0,0.15);
+      --card-hover-shadow: 0 15px 30px rgba(0,0,0,0.3);
+    }
+    
     html, body {
       overflow-x: hidden;
       max-width: 100vw;
@@ -12,7 +28,8 @@
       margin: 0;
       padding: 15px;
       font-family: 'Cairo', sans-serif;
-      background-color: #f4f0f8;
+      background-color: var(--light-bg);
+      color: var(--text);
     }
 
     /* العنوان */
@@ -21,15 +38,15 @@
       align-items: center;
       justify-content: center;
       gap: 10px;
-      background: linear-gradient(45deg, #6a1b9a, #9c27b0);
+      background: linear-gradient(45deg, var(--primary), var(--primary-light));
       color: white;
-      padding: 12px 20px;
+      padding: 12px 25px;
       border-radius: 50px;
       box-shadow: 0 5px 15px rgba(0,0,0,0.2);
       animation: slideUp 1s ease forwards, pulseHeader 2s infinite;
       opacity: 0;
       transform: translateY(30px);
-      font-size: 20px;
+      font-size: 22px;
       margin: 0 auto 20px;
       max-width: fit-content;
     }
@@ -43,7 +60,7 @@
     .header-wrapper {
       display: flex;
       justify-content: center;
-      margin-bottom: 15px;
+      margin-bottom: 25px;
     }
 
     @keyframes slideUp {
@@ -66,23 +83,22 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 20px;
+      gap: 25px;
       margin-bottom: 40px;
       overflow-x: hidden;
       max-width: 100vw;
     }
 
-    /* كارت تواصل مستطيل بالعرض */
+    /* كارت تواصل */
     .contact-card {
       position: relative;
       width: 350px;
-      height: 170px;
+      height: 180px;
       border-radius: 20px;
       overflow: hidden;
       cursor: pointer;
-      box-shadow: 0 10px 20px rgba(0,0,0,0.15);
+      box-shadow: var(--card-shadow);
       opacity: 0;
-      /* افتراضياً يبدأ خارج الشاشة يمين */
       transform: translateX(100px) translateY(60px);
       transition: transform 0.7s ease, opacity 0.7s ease, box-shadow 0.3s ease;
       display: flex;
@@ -93,7 +109,7 @@
       font-weight: 700;
       text-shadow: 0 2px 8px rgba(0,0,0,0.7);
       background-position: center center;
-      background-size: 130% auto;
+      background-size: cover;
       background-repeat: no-repeat;
       border: 2px solid transparent;
     }
@@ -108,7 +124,7 @@
       content: "";
       position: absolute;
       inset: 0;
-      background: rgba(0, 0, 0, 0.5);
+      background: linear-gradient(to top, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.3));
       z-index: 0;
       transition: background 0.3s ease;
       border-radius: 20px;
@@ -116,11 +132,11 @@
 
     .contact-card:hover {
       transform: translateY(-8px) scale(1.03);
-      box-shadow: 0 15px 30px rgba(0,0,0,0.3);
-      border-color: #9c27b0;
+      box-shadow: var(--card-hover-shadow);
+      border-color: var(--primary-light);
     }
     .contact-card:hover::before {
-      background: rgba(0, 0, 0, 0.6);
+      background: linear-gradient(to top, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.4));
     }
 
     /* محتوى الكارت */
@@ -138,6 +154,7 @@
     .name {
       font-size: 22px;
       margin-bottom: 3px;
+      font-weight: 700;
     }
 
     .subject {
@@ -150,7 +167,7 @@
       display: inline-flex;
       align-items: center;
       justify-content: center;
-      background-color: #25D366;
+      background-color: var(--accent);
       color: white;
       padding: 10px 18px;
       border-radius: 30px;
@@ -158,7 +175,7 @@
       font-size: 16px;
       font-weight: 700;
       box-shadow: 0 5px 15px rgba(37, 211, 102, 0.7);
-      transition: background-color 0.3s ease;
+      transition: all 0.3s ease;
       user-select: none;
       gap: 8px;
       margin: 0 auto;
@@ -167,7 +184,9 @@
     }
 
     .whatsapp-button:hover {
-      background-color: #1ebe57;
+      background-color: var(--accent-dark);
+      transform: translateY(-2px);
+      box-shadow: 0 7px 18px rgba(37, 211, 102, 0.9);
     }
 
     .whatsapp-button img {
@@ -179,7 +198,7 @@
       position: absolute;
       top: 15px;
       left: 15px;
-      background-color: #e91e63;
+      background-color: var(--warning);
       color: white;
       font-size: 12px;
       padding: 6px 12px;
@@ -193,7 +212,12 @@
       line-height: 1.2;
     }
 
-    /* ظهور الكارت (تتحرك لموضعها الطبيعي مع شفافية) */
+    .note-top.info {
+      background-color: var(--info);
+      box-shadow: 0 2px 8px rgba(33, 150, 243, 0.6);
+    }
+
+    /* ظهور الكارت */
     .contact-card.show {
       opacity: 1;
       transform: translateX(0) translateY(0);
@@ -216,7 +240,7 @@
       box-shadow: 0 5px 15px rgba(0,0,0,0.1);
       padding: 15px 20px;
       font-size: 16px;
-      color: #333;
+      color: var(--text);
       opacity: 0;
       transform: translateY(30px);
       transition: opacity 0.7s ease, transform 0.7s ease;
@@ -224,6 +248,7 @@
       display: flex;
       align-items: center;
       gap: 10px;
+      border-right: 4px solid var(--primary);
     }
 
     .tip.show {
@@ -234,6 +259,14 @@
     /* ايموجي */
     .tip .emoji {
       font-size: 22px;
+      background: linear-gradient(45deg, var(--primary), var(--primary-light));
+      color: white;
+      width: 35px;
+      height: 35px;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
     /* موبايل */
@@ -241,7 +274,6 @@
       .contact-card {
         width: 90%;
         height: 160px;
-        background-size: 140% auto;
       }
       .name {
         font-size: 18px;
@@ -279,7 +311,7 @@
 <div class="container">
 
   <!-- الكروت: نضيف class from-left بالتناوب -->
-  <div class="contact-card" style="background-image: url('https://files.catbox.moe/qxdnr0.png');">
+  <div class="contact-card" style="background-image: url('https://adelabdulrahman026-byte.github.io/dashboard/aref.png');">
     <div class="content-wrapper">
       <div class="name"> مستر محمد عارف</div>
       <div class="subject">مادة علمية</div>
@@ -290,7 +322,7 @@
     </div>
   </div>
 
-  <div class="contact-card from-left" style="background-image: url('https://files.catbox.moe/af5o2n.png');">
+  <div class="contact-card from-left" style="background-image: url('https://adelabdulrahman026-byte.github.io/dashboard/abdulah.png');">
     <div class="content-wrapper">
       <div class="name"> مستر عبدالله</div>
       <div class="subject">مادة علمية</div>
@@ -301,7 +333,7 @@
     </div>
   </div>
 
-  <div class="contact-card" style="background-image: url('https://files.catbox.moe/07pfgw.png');">
+  <div class="contact-card" style="background-image: url('https://adelabdulrahman026-byte.github.io/dashboard/noha.png');">
     <div class="content-wrapper">
       <div class="name">ميس نهي</div>
       <div class="subject">مادة علمية</div>
@@ -312,7 +344,7 @@
     </div>
   </div>
 
-  <div class="contact-card from-left" style="background-image: url('https://files.catbox.moe/styupz.png');">
+  <div class="contact-card from-left" style="background-image: url('https://adelabdulrahman026-byte.github.io/dashboard/omnia.png');">
     <div class="content-wrapper">
       <div class="name"> ميس أمنية</div>
       <div class="subject">مادة علمية</div>
@@ -323,7 +355,7 @@
     </div>
   </div>
 
-  <div class="contact-card" style="background-image: url('https://files.catbox.moe/f4qpf6.png');">
+  <div class="contact-card" style="background-image: url('https://adelabdulrahman026-byte.github.io/dashboard/manar.png');">
     <div class="content-wrapper">
       <div class="name"> ميس منار</div>
       <div class="subject">مادة علمية</div>
@@ -334,7 +366,7 @@
     </div>
   </div>
 
-  <div class="contact-card from-left" style="background-image: url('https://files.catbox.moe/loktrj.png');">
+  <div class="contact-card from-left" style="background-image: url('https://adelabdulrahman026-byte.github.io/dashboard/sagda.png');">
     <div class="note-top">خاص بطلاب الأونلاين فقط</div>
     <div class="content-wrapper">
       <div class="name">ميس سجدة</div>
@@ -346,9 +378,9 @@
     </div>
   </div>
 
-  <div class="contact-card" style="background-image: url('https://files.catbox.moe/md9fso.png');">
+  <div class="contact-card" style="background-image: url('https://adelabdulrahman026-byte.github.io/dashboard/fatma.png');">
     <div class="content-wrapper">
-      <div class="name">تواصل مع فطومة</div>
+      <div class="name">  فطومة</div>
       <div class="subject">علاقات عامة</div>
       <a href="https://wa.me/201070086878?text=ازيك%20يا%20فطومه" target="_blank" class="whatsapp-button">
         تواصل واتساب
@@ -357,8 +389,20 @@
     </div>
   </div>
 
-  <div class="contact-card from-left" style="background-image: url('https://files.catbox.moe/5euias.png');">
-    <div class="note-top" style="background-color: #2196f3; box-shadow: 0 2px 8px rgba(33, 150, 243, 0.6);">خاص بالاستفسارات</div>
+  <!-- بطاقة جديدة: تواصل مع استاذه ليلي -->
+  <div class="contact-card from-left" style="background-image: url('https://adelabdulrahman026-byte.github.io/dashboard/laila.png');">
+    <div class="content-wrapper">
+      <div class="name">  استاذه ليلي</div>
+      <div class="subject">علاقات عامة</div>
+      <a href="https://wa.me/201001933983?text=ازيك%20يا%20استاذه%20ليلي" target="_blank" class="whatsapp-button">
+        تواصل واتساب
+        <img src="https://img.icons8.com/ios-filled/20/ffffff/whatsapp.png" alt="واتساب" />
+      </a>
+    </div>
+  </div>
+
+  <div class="contact-card" style="background-image: url('https://adelabdulrahman026-byte.github.io/dashboard/fatma.png');">
+    <div class="note-top info">خاص بالاستفسارات</div>
     <div class="content-wrapper">
       <div class="name">خاص بالاستفسارات</div>
       <a href="https://wa.me/201276504341?text=لدي%20استفسار" target="_blank" class="whatsapp-button">
@@ -385,7 +429,9 @@
     const observer = new IntersectionObserver((entries) => {
       entries.forEach(entry => {
         if (entry.isIntersecting) {
-          entry.target.classList.add('show');
+          setTimeout(() => {
+            entry.target.classList.add('show');
+          }, 100 * Array.from(targets).indexOf(entry.target));
           observer.unobserve(entry.target);
         }
       });
