--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
     <!-- كارت الفيديو -->
     <section id="videoCard" aria-label="فيديو تعليمي">
       <video autoplay muted loop playsinline>
-        <source src="https://files.catbox.moe/hv05e9.mp4" type="video/mp4" />
+        <source src="https://adelabdulrahman026-byte.github.io/dashboard/v2.mp4" type="video/mp4" />
         متصفحك لا يدعم عرض الفيديو.
       </video>
     </section>
