--- a/hw.html
+++ b/hw.html
@@ -245,7 +245,7 @@
     // روابط الواجبات حسب نوع الواجب
     const links = {
       "first": "https://www.mrfaisal.net/hwwait.html",
-      "second": "https://www.mrfaisal.net/hwwait.html"
+      "second": "https://www.mrfaisal.net/hw3.html"
     };
 
     // لما تضغط على أي زر واجب يفتح النافذة
