--- a/talb.html
+++ b/talb.html
@@ -190,14 +190,14 @@
       <thead>
         <tr>
           <th>المحاضرة</th>
-          <th>الواجب في</th>
+          <th>الامتحان</th>
           <th>الواجب</th>
         </tr>
       </thead>
       <tbody>
         <tr>
           <td>الأولى</td>
-          <td>حل الواجب في مسار الواجبات </td>
+          <td>علي ما تم اخذه في الحصه </td>
           <td>من صفحة 2 إلى 14</td>
         </tr>
       </tbody>
