--- a/ntigahdortalta.html
+++ b/ntigahdortalta.html
@@ -95,6 +95,7 @@ if (!studentId) {
               <tr><th>👦 اسم الطالب</th><td>${name}</td></tr>
               <tr><th>🏫 اسم السنتر</th><td>${geo}</td></tr>
               <tr><th>📅 الحصه الاولي</th><td>${week1}</td></tr>
+              <tr><th>📅 الحصه الثانية</th><td>${week2}</td></tr>
             </table>
           `;
           break;
