--- a/hdortalta.html
+++ b/hdortalta.html
@@ -132,7 +132,7 @@
   </div>
 
   <script>
-    const API_URL = "https://script.google.com/macros/s/AKfycbw3MjcbUEsb0vhzcnvGZIrDMJSSPr2Ql_eobwgFWPsJnFucw07SHXQmeG1jy2KDnOYRGQ/exec";
+    const API_URL = "https://script.google.com/macros/s/AKfycbygOiltecPXEC2VyIbwHrfUnm_bpjl_uJ256JMCUaFry4u_zTDE7yueId8QnxjxRi7obQ/exec";
     const form = document.getElementById("attendanceForm");
     const loadingScreen = document.getElementById("loadingScreen");
     const resultDiv = document.getElementById("result");
@@ -155,7 +155,7 @@
               <p><strong>👦 اسم الطالب:</strong> ${data.name}</p>
               <p><strong>🧭 السنتر:</strong> ${data.geo}</p>
               <p><strong>📅الحصه الاولي:</strong> ${data.week1}</p>
-              <p><strong>📅الحصه الاولي:</strong> ${data.week2}</p>
+              <p><strong>📅الحصه الثانيه:</strong> ${data.week2}</p>
             </div>
           `;
         } else {
