--- a/natigttaltathanwy.html
+++ b/natigttaltathanwy.html
@@ -155,6 +155,7 @@
               <p><strong>👦 اسم الطالب:</strong> ${data.name}</p>
               <p><strong>🧭 السنتر:</strong> ${data.geo}</p>
               <p><strong>📅امتحان الحصه الاولي:</strong> ${data.week1}</p>
+              <p><strong>📅امتحان الحصه الثانيه:</strong> ${data.week2}</p>
             </div>
           `;
         } else {
