--- a/talb.html
+++ b/talb.html
@@ -184,43 +184,32 @@
       </tbody>
     </table>
     
-    <button id="secondHomeworkBtn" class="homework-btn" onclick="goToHomework()">اعمل الواجب دلوقتي</button>
-
     <table id="thirdTable">
-      <thead>
-        <tr>
-          <th>المحاضرة</th>
-          <th>الامتحان</th>
-          <th>الواجب</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>الأولى</td>
-          <td>علي ما تم اخذه في الحصه </td>
-          <td>من صفحة 2 إلى 14</td>
-        </tr>
-      </tbody>
-    </table>
-     <button id="secondHomeworkBtn" class="homework-btn" onclick="goToHomework()">اعمل الواجب دلوقتي</button>
-      <thead>
-        <tr>
-          <th>المحاضرة</th>
-          <th>الامتحان</th>
-          <th>الواجب</th>
-          <th>المطلوب</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>الثانيه</td>
-          <td>   من اول الدرس التمهيدي حتي نهاية راتزل  </td>
-          <td>من صفحة 15 إلى 22</td>
-          <td>  مشاهدة فيديو الواجب +الزتونه الاسبوع الثاني  </td>
-        </tr>
-      </tbody>
-    </table>
-    <button id="thirdHomeworkBtn" class="homework-btn" onclick="goToHomework()">اعمل الواجب دلوقتي</button>
+  <thead>
+    <tr>
+      <th>المحاضرة</th>
+      <th>الامتحان</th>
+      <th>الواجب</th>
+      <th>المطلوب</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>الأولى</td>
+      <td>علي ما تم اخذه في الحصه</td>
+      <td>من صفحة 2 إلى 14</td>
+      <td>—</td>
+    </tr>
+    <tr>
+      <td>الثانية</td>
+      <td>من اول الدرس التمهيدي حتي نهاية راتزل</td>
+      <td>من صفحة 15 إلى 22</td>
+      <td>مشاهدة فيديو الواجب + الزتونة الاسبوع الثاني</td>
+    </tr>
+  </tbody>
+</table>
+
+<button id="thirdHomeworkBtn" class="homework-btn" onclick="goToHomework()">اعمل الواجب دلوقتي</button>
 
   </div>
 
