--- a/hw.html
+++ b/hw.html
@@ -245,7 +245,7 @@
     // روابط الواجبات حسب نوع الواجب
     const links = {
       "first": "https://www.mrfaisal.net/hwwait.html",
-      "second": "https://www.mrfaisal.net/hw3.html"
+      "second": "https://www.mrfaisal.net/%D8%A7%D8%AE%D8%AA%D8%A7%D8%B1%20%D9%88%D8%A7%D8%AC%D8%A8%D9%83.html"
     };
 
     // لما تضغط على أي زر واجب يفتح النافذة
