--- a/اختار واجبك.html
+++ b/اختار واجبك.html
@@ -270,7 +270,7 @@
         
         <div class="content">
             <div class="options-grid">
-                <div class="option-card" onclick="window.location.href='https://www.mrfaisal.net/%D9%88%D8%A7%D8%AC%D8%A8%20%D8%A7%D9%84%D9%85%D8%AD%D8%A7%D8%B6%D8%B1%D8%A9%20%D8%A7%D9%84%D8%A7%D9%88%D9%84%D9%8A.html'">
+                <div class="option-card" onclick="window.location.href='https://www.mrfaisal.net/%D9%88%D8%A7%D8%AC%D8%A8%20%D8%A7%D9%84%D9%85%D8%AD%D8%A7%D8%B6%D8%B1%D8%A9%20%D8%A7%D9%84%D8%A7%D9%88%D9%84%D9%8A%20%D8%AA%D8%A7%D9%84%D8%AA%D9%87.html'">
                     <div class="option-icon">
                         <i class="fas fa-book-open"></i>
                     </div>
