Update واجب المحاضرة الثانية 3.html

--- a/واجب المحاضرة الثانية 3.html
+++ b/واجب المحاضرة الثانية 3.html
@@ -233,7 +233,7 @@ button:hover{
 <div class="question-container" id="homeworkForm"></div>
 <div class="completed-message" id="completedMessage">
   <p>🎉 مبروك! خلصت كل الأسئلة</p>
-  <p>دلوقتي تقدر تسلم واجبك</p>
+  <p>دلوقتي تقدر تسلم واجبك اضغط علي سلم الواجب علشان تاخد qr بتاعك </p>
 </div>
 <div class="nav-buttons">
   <button id="prevQuestion" onclick="prevQuestion()">السؤال السابق</button>
