--- a/الصفحه-الرئيسية/index.html
+++ b/الصفحه-الرئيسية/index.html
@@ -730,35 +730,35 @@
       <p>نحو تعليم جغرافي متميز</p>
     </div>
     <nav class="sidebar-menu">
-      <a href="cors.html" class="button-link">
+      <a href="https://www.mrfaisal.net/cors.html" class="button-link">
         <i class="fas fa-school"></i>
         منصتنا التعليمية
       </a>
-      <a href="motaba.html" class="button-link">
+      <a href="https://www.mrfaisal.net/motaba.html" class="button-link">
         <i class="fas fa-binoculars"></i>
         المتابعة
       </a>
-      <a href="moayed.html" class="button-link">
+      <a href="https://www.mrfaisal.net/moayed.html" class="button-link">
         <i class="fas fa-clock"></i>
         مواعيدنا
       </a>
-      <a href="hw.html" class="button-link">
+      <a href="https://www.mrfaisal.net/hw.html" class="button-link">
         <i class="fas fa-tasks"></i>
         الواجبات
       </a>
-      <a href="track.html" class="button-link">
+      <a href="https://www.mrfaisal.net/track.html" class="button-link">
         <i class="fas fa-shopping-cart"></i>
         اشتري من عندنا
       </a>
-      <a href="contact.html" class="button-link">
+      <a href="https://www.mrfaisal.net/contact.html" class="button-link">
         <i class="fas fa-question-circle"></i>
         اسألنا سؤال
       </a>
-      <a href="shakwy.html" class="button-link">
+      <a href="https://www.mrfaisal.net/shakwy.html" class="button-link">
         <i class="fas fa-comment-dots"></i>
         الشكاوي
       </a>
-      <a href="exam.html" class="button-link">
+      <a href="https://www.mrfaisal.net/exam.html" class="button-link">
         <i class="fas fa-file-alt"></i>
         امتحاناتنا
       </a>
