--- a/index.html
+++ b/index.html
@@ -828,7 +828,7 @@
         <div class="social-card">
           <a href="https://www.facebook.com/groups/450656791778335/?locale=ar_AR" target="_blank" rel="noopener noreferrer">
             <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="فيسبوك جروب" />
-            <h3>انضم لجروب الفيسبook</h3>
+            <h3>انضم لجروب الفيسبوك</h3>
             <p>محتوى خاص وتفاعل مباشر</p>
           </a>
         </div>
