--- a/الصفحه-الرئيسية/index.html
+++ b/الصفحه-الرئيسية/index.html
@@ -3,6 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <title>موقع مستر فيصل الرسمي</title>
+  <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
+<script>
+  window.OneSignalDeferred = window.OneSignalDeferred || [];
+  OneSignalDeferred.push(async function(OneSignal) {
+    await OneSignal.init({
+      appId: "8e36161f-8906-41f3-b0b8-3e272167065b",
+    });
+  });
+</script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no" />
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;800;900&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
