--- a/index.html
+++ b/index.html
@@ -943,5 +943,13 @@
       e.preventDefault();
     });
   </script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-NQTPWYLG8Z"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-NQTPWYLG8Z');
+</script>
 </body>
 </html>
