--- a/index.html
+++ b/index.html
@@ -943,5 +943,6 @@
       e.preventDefault();
     });
   </script>
+  <script async src="https://cdn.umami.is/script.js" data-website-id="c6875b06-c2e5-4e97-90b2-56108af0a647"></script>
 </body>
 </html>
