--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     });
   });
 </script>
+  <link rel="icon" href="https://adelabdulrahman026-byte.github.io/dashboard/assets_task_01k05v63wre6rayke660pxxj1j_1752543094_img_0.png" type="image/x-icon">
+<link rel="shortcut icon" href="https://adelabdulrahman026-byte.github.io/dashboard/assets_task_01k05v63wre6rayke660pxxj1j_1752543094_img_0.png" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no" />
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;800;900&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
