--- a/اختار واجبك.html
+++ b/اختار واجبك.html
@@ -287,6 +287,14 @@
                     <p class="option-desc">من صفحة 15 الي 22</p>
                     <button class="option-btn">عرض الواجب</button>
                 </div>
+                <div class="option-card" onclick="window.location.href='https://www.mrfaisal.net/hwwait.html'">
+                    <div class="option-icon">
+                        <i class="fas fa-chalkboard-teacher"></i>
+                    </div>
+                    <h2 class="option-title">واجب المحاضرة الثالثه</h2>
+                    <p class="option-desc">  قريبا  </p>
+                    <button class="option-btn">عرض الواجب</button>
+                </div>
             </div>
         </div>
         
